--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:id="@+id/MyContainer"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@color/accent"
+    >
 
 </RelativeLayout>
